<?xml version="1.0"?>
<package format="3">
  <name>pressure_sensor</name>
  <version>0.1.0</version>
  <description>ROS 2 package for MS5837 pressure sensor with odometry output for EKF integration</description>
  <maintainer email="shoban.r@aquaairx.com">Shoban Renold J</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
